<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment"
    android:background="@color/firefly">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.20"
                android:src="@drawable/splash_icon"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:startIconDrawable="@drawable/ic_person"
                app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_mail"
                app:layout_constraintTop_toBottomOf="@id/textFieldFullName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textFieldMail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_32sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_up_all_caps"
                android:alpha="0.5"
                android:enabled="false"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_8sdp"
                android:backgroundTint="@color/pumice"
                android:textColor="@color/black"
                android:includeFontPadding="false"
                android:fontFamily="@font/open_sans_medium"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

